  use a single merged collocated product (instead of a combination of a csv
  collocation result file and a dataset directory of collocated products).

* An area parameter for operations can now either be a reference to an
  area mask file or a single polygon provided as lat/lon array parameters.

* Added derivation to derive the area (size) of latitude/longitude bounds.

* The 'data_type' parameter for harp_product_get_derived_variable() and
  harp_product_add_derived_variable() is now a pointer to allow it to be
  optional (i.e. pass NULL to use the default data type).

* Added harp_geometry_get_area(),
  harp_product_get_smoothed_column_using_collocated_product(),
  harp_product_smooth_vertical_with_collocated_product(),
  harp_product_sort(), harp_product_regrid_with_collocated_product(),
  harp_set_udunits2_xml_path(), harp_set_udunits2_xml_path_conditional(),
  and harp_variable_set_enumeration_values() functions.

* Changed 'percentage' parameter of harp_geometry_has_area_overlap() to
  'fraction'.

* harp_product_set_source_product() now has a product path as parameter
  and stores the base name of this as source_product value.

* Added HARP_UNIT_AREA default unit.

* The C interface for collocation results was modified to support a
  dynamic set of collocation criteria differences (based on variable names
  for these differences).

* The Python interface now sets the udunits2 xml path dynamically,
  relative to the location of the HARP C library.

* wrap() operation now properly updates valid_min/valid_max properties.

* codadef files are now installed in <prefix>/share/coda/definitions.
  This allows a present CODA installation to use the same codadef files.

* Windows installation now installs data and documentation files in the
  subdirectory <prefix>/share/harp.

* Fix issue in deriving total column from partial column profile if partial
  column profile did not have {time,vertical} dimensions.

* Fix invalid results from binning operation/function.
