@@ -21,3 +21,7 @@ longitude bounds derivations
          \lambda^{B}(i,2) & = & \lambda^{B}(i+1,1), 1 \leq i < N \\
          \lambda^{B}(N,2) & = & 2\lambda(N) - \lambda(N-1)
       \end{eqnarray}
+
+   This formula applies if the harp option ``regrid_out_of_bounds`` is set to ``nan`` or to ``extrapolate``.
+   If the option is set to ``edge`` then the first and last boundary value are set to the midpoints
+   (:math:`\lambda^{B}(1,1) = \lambda(1)`, :math:`\lambda^{B}(N,2) = \lambda(N)`).
