@@ -248,7 +248,11 @@
    \phi^{B}(i,1) &amp; = &amp; \frac{\phi(i-1) + \phi(i)}{2}, 1 &lt; i \leq N \\
    \phi^{B}(i,2) &amp; = &amp; \phi^{B}(i+1,1), 1 \leq i &lt; N \\
    \phi^{B}(N,2) &amp; = &amp; 2\phi(N) - \phi(N-1)
-\end{eqnarray}</div></li>
+\end{eqnarray}</div><p>This formula applies if the harp option <code class="docutils literal"><span class="pre">regrid_out_of_bounds</span></code> is set to <code class="docutils literal"><span class="pre">nan</span></code> or to <code class="docutils literal"><span class="pre">extrapolate</span></code>.
+If the option is set to <code class="docutils literal"><span class="pre">edge</span></code> then the first and last boundary value are set to the midpoints
+(<span class="math">\(\phi^{B}(1,1) = \phi(1)\)</span>, <span class="math">\(\phi^{B}(N,2) = \phi(N)\)</span>).</p>
+<p>Note that all latitude values will always be clamped to the range <span class="math">\([-90,90]\)</span>.</p>
+</li>
 </ol>
 </div>
 
