@@ -501,7 +501,7 @@ that fall outside the source grid range.
 Possible values are:</p>
 <ul class="last simple">
 <li><code class="docutils literal"><span class="pre">nan</span></code> (default) to set values outside the range to NaN</li>
-<li><code class="docutils literal"><span class="pre">edge</span></code> to use to nearest edge value</li>
+<li><code class="docutils literal"><span class="pre">edge</span></code> to use the nearest edge value</li>
 <li><code class="docutils literal"><span class="pre">extrapolate</span></code> to perform extrapolation</li>
 </ul>
 </dd>
